tests/class_statics/class_statics.exp
Error: test.js:7
  7: A.qux = function(x: string) { } // error?
       ^^^ property `qux`. Property not found in
  7: A.qux = function(x: string) { } // error?
     ^ statics of `A`

Error: test.js:9
  9: class B extends A {
           ^ B. Cannot extend
  9: class B extends A {
                     ^ A
  Property `foo` is incompatible:
     11:   static foo(x: string) { } // error?
           ^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
      4:   static foo(x: number) { }
           ^^^^^^^^^^^^^^^^^^^^^^^^^ function
      The first parameter is incompatible:
          4:   static foo(x: number) { }
                             ^^^^^^ number. This type is incompatible with
         11:   static foo(x: string) { } // error?
                             ^^^^^^ string

Error: test.js:9
  9: class B extends A {
           ^ B. Cannot extend
  9: class B extends A {
                     ^ A
  Property `x` is incompatible:
     10:   static x: string; // error?
                     ^^^^^^ string. This type is incompatible with
      2:   static x: number;
                     ^^^^^^ number

Error: test.js:13
 13:     B.x = 0; // error
               ^ number [1] is incompatible with string [2].
  References:
   13:     B.x = 0; // error
                 ^ [1]: number
   13:     B.x = 0; // error
           ^^^ [2]: string

Error: test.js:15
 15:     B.foo(0); // error
               ^ number. This type is incompatible with the expected param type of
 11:   static foo(x: string) { } // error?
                     ^^^^^^ string

Error: test.js:17
 17:     B.y = 0; // error
               ^ number [1] is incompatible with string [2].
  References:
   17:     B.y = 0; // error
                 ^ [1]: number
   17:     B.y = 0; // error
           ^^^ [2]: string

Error: test.js:18
 18:     B.bar(0); // error
               ^ number. This type is incompatible with the expected param type of
  5:   static bar(y: string) { }
                     ^^^^^^ string

Error: test.js:19
 19:     B.qux(0); // error
           ^^^ property `qux`. Property not found in
 19:     B.qux(0); // error
         ^ statics of `B`

Error: test.js:26
 26:     return new this(); // error B ~> number
                ^^^^^^^^^^ B. This type is incompatible with the expected return type of
 25:   static badCreate(): number {
                           ^^^^^^ number

Error: test.js:40
 40:     D.foo(0); // error?
           ^^^ property `foo`. Property not found in
 40:     D.foo(0); // error?
         ^ statics of `D`

Error: test.js:42
 42:     D.bar(0);
               ^ number. This type is incompatible with the expected param type of
 38: class D extends C<string> {
                       ^^^^^^ string

Error: test.js:47
 47: (new A: typeof A);
      ^^^^^ Cannot cast `new A()` to statics of `A` because `A` [1] is incompatible with statics of `A` [2].
  References:
   47: (new A: typeof A);
        ^^^^^ [1]: `A`
   47: (new A: typeof A);
               ^^^^^^^^ [2]: statics of `A`

Error: test.js:53
 53:     this.bar(); // error
              ^^^ property `bar`. Property not found in
 53:     this.bar(); // error
         ^^^^ statics of `E`

Error: test.js:54
 54:     return this.x; // error
                ^^^^^^ number. This type is incompatible with the expected return type of
 52:   static foo(): string {
                     ^^^^^^ string


Found 14 errors
